--- a/company/templates/index.html
+++ b/company/templates/index.html
@@ -57,5 +57,24 @@
         </table>
     </div>        
 </div>
+<div class='row justify-content-center'>
+  <div class='col-md-12'>
+    <div class="pagination">
+      <div class="step-links">
+        {% if companies.has_previous %}
+            <a href="?page={{ companies.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ companies.number }} of {{ companies.paginator.num_pages }}.
+        </span>
+
+        {% if companies.has_next %}
+            <a href="?page={{ companies.next_page_number }}">next</a>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock content %}
