--- a/company/static/css/styles.css
+++ b/company/static/css/styles.css
@@ -1,3 +1,25 @@
 body {
 	padding-top: 56px;
 }
+
+.title {
+	text-transform: uppercase;
+	font-size: 18px;
+	padding: 10px 0;
+	margin-bottom: 20px;
+	border-bottom: 2px solid black;
+}
+
+.companies {
+	padding: 10px 0;
+	margin-bottom: 5px;
+	border-bottom: 1px solid black;
+	height: 150px;
+}
+
+.results {
+	padding: 10px 0;
+	margin-bottom: 5px;
+	border-bottom: 1px solid black;
+	height: 75px;
+}
